fix: 修复日志页面闪退并优化日志过滤
- AndroidManifest 注册 log.LogViewerActivity 解决闪退
- 日志页面使用 PID 过滤，只显示本应用日志
- setting 包的 LogViewerActivity 同步优化